<resources>
    <string name="app_name">4 Wine Wine</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hey there!</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="button_BAC">BAC Checker</string>
    <string name="title_activity_home">BAC</string>
    <string name="bac_title">BAC Checker</string>
    <string name="entry_title">Entry</string>
    <string name="title_activity_bacfinal">BACFinal</string>
    <string name="title_activity_tools">Tools</string>
    <string name="button_tools">Tools</string>
    <string name="intro">An application for all your wine drinking needs!</string>
    <string name="pairings">Food Pairings</string>
    <string name="title_activity_pairings">Pairings</string>
    <string name="location">Winery Locations</string>
    <string name="title_activity_locations">Locations</string>
    <string name="sex">Gender:</string>
    <string name="settings">Settings</string>
    <string name="education">Education</string>
    <string name="title_activity_education">Education</string>
    <string name="title_activity_settings">Settings</string>
    <string name="glass">glass</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Weight">Weight</string>
    <string name="Num_of_drinks">Number of Drinks</string>
    <string name="Hours_since">Hours Since Drinking</string>
    <string name="calculateBAC">Calculate BAC</string>
    <string name="Education">Education</string>
    <string name="Etiquette">Etiquette</string>
    <string name="Regions">Regions</string>
    <string name="Types">Types</string>
    <string name="Production">Production</string>
    <string name="history">History</string>
    <string name="Pricing">Pricing</string>
    <string name="digitalcellar">Digital Cellar</string>
    <string name="button_WineLibraries">Wine Libraries</string>
    <string name="button_add_a_wine">Add a Wine</string>
    <string name="title_activity_sample">SampleActivity</string>
    <string name="favorites">Favorites</string>
    <string name="wishlist">Wishlist</string>
    <string name="search_wines">Search Wines</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_wine_libraries">Libraries</string>
    <string name="title_activity_digital_cellar">Libraries</string>
    <string name="title_activity_favorites">Favorites</string>
    <string name="title_activity_wishlist">Wishlist</string>
    <string name="title_activity_search_wines">Search</string>
    <string name="tbd">TBD</string>
    <string name="title_activity_pair__meat">Find Wine</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_foodtowine_meat">Find Wine</string>
    <string name="beef">Cabernet Sauvignon, Merlot, Malbec, Red Bordeaux, Shiraz, or Zinfandel</string>
    <string name="chicken">Chardonnay or White Burgandy</string>
    <string name="fish">Chardonnay or Sauvignon Blanc</string>
    <string name="pork">Chardonnay, Sauvignon Blanc, or Riesling</string>
    <string name="title_activity_foodtowine_pasta">Find Wine</string>
    <string name="tomato">Chianti, Sangiovese, or Zinfandel</string>
    <string name="cream">Sauvignon Blanc, Chardonnay, or Pinot Grigio</string>
    <string name="green">Chardonnay</string>
    <string name="mush">Pinot Noir</string>
    <string name="bleu">Sauternes or Port</string>
    <string name="hard">Cabernet Sauvignon</string>
    <string name="soft">Chardonnay, Pinot Grigio, Sauvignon Blanc, or Pinot Noir</string>
    <string name="title_activity_foodtowine__veggie">Find Wine</string>
    <string name="title_activity_foodtowine_cheese">Find Wine</string>
    <string name="title_activity_wineto_food">Find Food</string>
    <string name="chardonnay">Poultry and game birds, veal and pork, rabbit fish and pasta preparations which feature cream and/or butter, mushrooms.</string>
    <string name="sauvignon">First courses, seafood, ethnic dishes—pastas, curries, salsas, spicy sausages, vegetable dishes, luncheon salads, olive-oil based dishes, tomato sauces, goat cheese.</string>
    <string name="chenin">Braised Chicken, sushi and other Oriental dishes, poultry, pork.</string>
    <string name="gewur">Spicy cuisines such as Chinese, Mexican, and Indian, mild sausages, fruit salad.</string>
    <string name="riesling">Crabmeat, appetizers and finger foods, pork, salads.</string>
    <string name="cabernet">Beef, lamb, pork, duck, game meats, cheeses.</string>
    <string name="merlot">Beef, lamb, pork, duck, game meats, cheeses, stews, pizza, heart pastas.</string>
    <string name="zinfandel">Hamburgers, beef, lamb, venison and game, hearty pastas, turkey, stews, pizza.</string>
    <string name="pinot">Lamb, duck, turkey, game birds, beef, rabbit, semi-soft cheeses.</string>
    <string name="pink">Best with smoked foods, quiche, pork and ham,Mexican and Thai food. Can be served with all food.</string>
    <string name="brut">Aperitifs and first courses, fruits and nuts. Fuller bodied variations go well with any fish and chicken.</string>
    <string name="blancdenoir">Aperitif, with lunch, desserts.</string>
    <string name="blancdeblanc">Caviar.</string>
    <string name="title_activity_foodto_wine">Find Wine</string>
    <string name="title_activity_winetofood_white">Find Food</string>
    <string name="title_activity_winetofood_red">Find Food</string>
    <string name="title_activity_winetofood_other">Find Food</string>
    <string name="title_activity_my_wines">My Wines</string>
    <string name="title_activity_types_quiz1">Types Quiz</string>
    <string name="title_activity_quiz_result1">Quiz Result</string>
    <string name="title_activity_display_search">Display Search</string>
    <string name="title_activity_view_wine">View Wine</string>
    <string name="title_activity_food_pairings_quiz">Pairings Quiz</string>
    <string name="title_activity_view_fav_wine">Wine</string>
    <string name="title_activity_view_wish_wine">Wine</string>
    <string name="button_more_information">More Information</string>
    <string name="button_home">Home</string>
    <string name="button_education">Education</string>
    <string name="title_activity_types">Types</string>
    <string name="Learning">Learning</string>
    <string name="title_activity_learn">Learn</string>
    <string name="types_info">\tWhen it comes to wine, there are 5 main categories - Red, White, Rose, Fortified Wine, and Sparkling Wine. The catergorizing of wines comes from their difference in production methods which results in defferent taste and texture. Red wine has a slight bitterness to it because it is fermented with its skin on, resulting in the red color. White wine is sweeter because it is fermented without its skin, resulting in a light gold color. Rose is in between red wine and white wine because it is left for a period of time with its skin, but the skin is then removed after a certain time. Sparkling wine\'s sparkle comes from its fermentation, which usually occurs in a bottle, a large tank, or from injection. The carbon dioxide adds a slight amount of bitterness to it, but the sweetness of the white or rose wine covers it up. Fortified wines, like port, are wines which have other alcohols added to them. They usually have a higher alcohol content, and therefore less sweetness, coming with more of a kick.</string>
    <string name="title_activity_history">History</string>
    <string name="history_info">\tWine has been around since 7000BC. Wine is commonly believed to have started in Georgia; however, it wasn\'t until the Roman Empire that wine really became popular. Wine started off with limited production, and was served only to the nobles. The first sign of mass production was found in Armenia by what historians believe to be the oldest winery. Although most wines (both historically and currently) are made of grapes, the Chinese were known to make wine out of rice. \n\tThere are many stories behind how wine was first discovered. One of the more popular stories of the origin of wine is that of King Jamshid banishing one of his harem ladies from his kingdom. Feeling sad, she considered suicide, and found her way into the king\'s warehouse in search for poison. There she found a jar marked poison containing the remnants of grapes that had spoiled and been deemed undrinkable. Little did she know that the \"poison\" was actually fermented grapes. After drinking it, she discovered the effect to be pleasant and her spirits were lifted. She took her discovery to the king, who fell in love with the wine, and accepted the girl back into his harem. </string>
    <string name="title_activity_regions">Regions</string>
    <string name="regions_info">\tA wine region is a region that is recognized to be an area major wine production. Areas with vineyards can apply to have their location be labeled as a wine region, but must be approved. A location that is a wine region is not considered to be \"better\" than a location that does not have the label, but it is more prestigious to be producing wine within a wine region.\n\tWine Regions are mainly catogerized into two categories - Old World and New World. The Old World title is given to the countries that have been in the winemaking industry for centuries, such as Italy, Spain, and France, while the New World title is given to the countries that are newer to the wine making business, such as the USA and Mexico. Old World and New World tells nothing of the quality of the wine but from the difference in winemaking techniques, there are certain expectations from each of the regions. The five largest wine producing countries are China, USA, Italy, France and Spain. Within each wine region, there are usually smaller wine regions associated with it. For example, the USA is a wine region, and within the USA, California is a wine region. Within California, Nappa Valley is also a wine region. Each of these areas is considered a wine region.</string>
    <string name="title_activity_production">Production</string>
    <string name="production_info">\tWine production is also known as winemaking, or vinification. Although wines are predominantly made of grapes, there are also wines made from honey, like Mead. There are a multitude of ways of producing wine. \n\tRed wine is made from red grapes. The red grapes are juiced and left to ferment with yeast. The skins of the grapes are left to ferment with it, giving it its red color and bitter taste. Red wines are usually left to ferment in oak barrels for 1-2 years before being placed into bottles for distribution. \n\tWhite wines, on the other hand, are made of both white and red grapes. They are juiced and left to ferment without their skins on, resulting in their light golden color. They are usually left to ferment for 1 year before being bottled for distribution.\n\tRose is a mixture of the red and white methods. Rose is made from red grapes. They are juiced and left to ferment with their skins, but their skins are removed early on, giving the wine a more pinkish color. Rose wines are typically left for 1 year before being bottled and sent for distribution.</string>
    <string name="button_quiz">Quiz</string>
    <string name="Quiz">Quiz</string>
    <string name="education_text">Education</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="title_activity_etiquette">Etiquette</string>
    <string name="learn_text">Learn</string>
    <string name="userStats">User Stats</string>
</resources>