<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:screenOrientation="portrait"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Tools" >

    <!-- Test -->
    <ImageView
        android:id="@+id/glass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bacButton"
        android:layout_alignLeft="@+id/textView1"
        android:baselineAlignBottom="false"
        android:layout_marginBottom="55dp"
        android:contentDescription="@string/glass"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        android:src="@drawable/glass" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_tools"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/locationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pairingsButton"
        android:minHeight="42dip"
        android:onClick="goLocations"
        android:text="@string/location" />

    <Button
        android:id="@+id/pairingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/locationButton"
        android:layout_alignParentBottom="true"
        android:minHeight="42dip"
        android:onClick="goPairings"
        android:text="@string/pairings" />

    <Button
        android:id="@+id/bacButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/locationButton"
        android:layout_alignLeft="@+id/locationButton"
        android:minHeight="42dip"
        android:onClick="goBAC"
        android:text="@string/button_BAC" />

    <Button
        android:id="@+id/button_WineLibraries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bacButton"
        android:layout_alignLeft="@+id/glass"
        android:minHeight="42dip"
        android:onClick="goWineLibraries"
        android:text="@string/button_WineLibraries" />

    

</RelativeLayout>