<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:screenOrientation="portrait"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TypesLearn" >

    <WebView
        android:id="@+id/webview"
        android:layout_width="0dp"
        android:layout_height="0dp" 
        android:layout_above="@+id/typesinfo" />

    <Button
        android:id="@+id/types_url_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_above="@+id/types_quiz_button"
        android:onClick="loadUrl"
        android:text="@string/button_more_information" />

    <Button
        android:id="@+id/types_quiz_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_above="@+id/types_education_button"
        android:onClick="goToQuiz"
        android:text="@string/button_quiz" />

    <Button
        android:id="@+id/types_education_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_alignParentBottom="true"
        android:onClick="goToEducation"
        android:text="@string/button_education" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/types_url_button"
        android:textAlignment="center" >
    
    	<TextView
    	    android:id="@+id/typesinfo"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:gravity="center_vertical|fill"
    	    android:hint="@string/types_info"
    	    android:textAlignment="center" >

        	<requestFocus />
    	</TextView>
    
    </ScrollView>

</RelativeLayout>