<!-- TODO Write all strings into strings.xml for better MVC? -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:screenOrientation="portrait"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/glasses"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BAC" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/sex" />

    <RadioGroup
        android:id="@+id/genderChooser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="138dp"
            android:text="@string/Male" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Female" />
    </RadioGroup>

    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        
        android:layout_marginTop="60dp"
        android:text="@string/Weight" />

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/weight"
        android:layout_below="@+id/weight"
        android:ems="3"
        android:inputType="number"
        android:text="200" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editNumOfDrinks"
        android:layout_below="@+id/editNumOfDrinks"
        android:layout_marginTop="28dp"
        android:text="@string/Hours_since" />

    <TextView
        android:id="@+id/numDrinks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/genderChooser"
        android:layout_below="@+id/genderChooser"
        android:text="@string/Num_of_drinks" />

    <EditText
        android:id="@+id/editNumOfDrinks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/numDrinks"
        android:layout_alignRight="@+id/editWeight"
        android:layout_below="@+id/numDrinks"
        android:ems="10"
        android:inputType="number"
        android:text="0" />

    <EditText
        android:id="@+id/editHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/hours"
        android:layout_alignRight="@+id/editNumOfDrinks"
        android:layout_below="@+id/hours"
        android:ems="10"
        android:inputType="number"
        android:text="0" />

    <Button
        android:id="@+id/goBACButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editHours"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="19dp"
        android:onClick="calcBAC"
        android:text="@string/calculateBAC" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/goBACButton"
        android:layout_alignLeft="@+id/BACwarning"
        android:layout_marginLeft="17dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/BACwarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/goBACButton"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/goBACButton"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>